--- a/src/pages/checkout-page.html
+++ b/src/pages/checkout-page.html
@@ -1,167 +1,1 @@
-<html><head><link rel="import" href="../../bower_components/polymer/polymer.html">
-
-<link rel="import" href="../../bower_components/iron-form/iron-form.html">
-
-<link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
-
-<link rel="import" href="../../bower_components/gold-phone-input/gold-phone-input.html">
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/paper-item/paper-item.html">
-<link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html">
-<link rel="import" href="../../bower_components/paper-input/paper-textarea.html">
-<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../../bower_components/paper-styles/color.html">
-<link rel="import" href="../../bower_components/paper-styles/typography.html">
-
-
-<link rel="import" href="../paneiro-theme.html">
-<link rel="import" href="../elements/phone-input.html">
-<link rel="import" href="../elements/cpf-input.html">
-
-</head><body><dom-module id="checkout-page">
-  <template>
-    <style type="text/css">
-      :host {
-        display: block;
-        @apply(--paper-font-common-base);
-      }    
-
-      header {
-        padding: 0 8px;
-      }
-
-      main {
-        padding: 48px 0;
-      }
-
-      .page-title {
-        @apply(--paper-font-display1);
-        margin-bottom: 20px;
-        font-weight: 300;
-        text-align: center;
-      }     
-
-      .divider {
-        height: 1px;
-        width: 100%;                
-
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        justify-content: center;
-      } 
-
-      .divider-border {        
-        height: 100%;
-        width: 100px;
-        max-width: 100%;
-        background: var(--primary-color);        
-      }      
-
-      paper-button {
-        @apply(--paper-font-button);
-        background: var(--primary-color);
-        color: #fff;
-        margin: 0;
-      }    
-
-      #checkoutForm {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-      }
-
-      .input {
-        margin: 8px;
-      }
-
-      .input-name, .input-email {
-        width: calc(66.666666% - 16px);
-      }
-
-      .input-cpf, .input-phone {
-        width: calc(33.333333% - 16px);
-      }
-
-      .input-address, .paper-button-container {
-        width: calc(100% - 16px);
-      }
-
-      .input-delivery-day, .input-delivery-time {
-        width: calc(50% - 16px);
-      }
-
-      .paper-button-container {
-        margin: 8px;
-        text-align: center;
-      }                  
-
-      @media screen and (max-width: 768px) {
-        .input-name, .input-email, .input-cpf, .input-phone {
-          width: calc(100% - 16px);
-        }
-      }
-    </style>            
-
-    <iron-location id="ironLocation"></iron-location>
-
-    <div class="container">
-      <header>              
-        <h2 class="page-title">Fechar Pedido</h2>
-
-        <div class="divider">
-          <div class="divider-border"></div>
-        </div>                                      
-      </header>                                            
-
-      <main>        
-        <form is="iron-form" id="checkoutForm" action="" accept-charset="UTF-8" method="post" on-iron-form-presubmit="onCheckoutFormPreSubmit">
-          <paper-input auto-validate="" error-message="Por favor digite seu nome completo" name="name" class="input input-name" label="Nome Completo" value$="{{user.name}}" disabled=""></paper-input>
-
-          <cpf-input auto-validate="" error-message="Por favor digite um cpf válido" name="cpf" class="input input-cpf" label="Cpf" value$="{{user.cpf}}" disabled=""></cpf-input>
-
-          <gold-email-input class="input input-email" auto-validate="" name="email" label="Email" error-message="Por favor digite um email válido" value$="{{user.email}}" disabled=""></gold-email-input>
-
-          <phone-input class="input input-phone" auto-validate="" name="phone" label="Telefone" error-message="Por favor digite um telefone válido" value$="{{user.phone}}" disabled=""></phone-input>
-
-          <paper-input name="addr" class="input input-address" label="Endereço para entrega" error-message="Por favor informe o endereço onde deseja receber o pedido." required=""></paper-input>
-
-          <paper-dropdown-menu id="dateMenu" label="Dia da entrega" class="input input-delivery-day" name="delivery-day" required="">
-            <paper-listbox class="dropdown-content" selected="0">
-              <template is="dom-repeat" items="{{days}}">
-                <paper-item data-value$="{{item.value}}">{{item.label}}</paper-item>                  
-              </template>              
-            </paper-listbox>
-          </paper-dropdown-menu>
-
-          <paper-dropdown-menu id="timeMenu" label="Horário da entrega" class="input input-delivery-time" name="delivery-time" required="">
-            <paper-listbox class="dropdown-content" selected="0">                            
-              <paper-item data-value="12:00">12:00 - 14:00</paper-item>              
-              <paper-item data-value="14:00">14:00 - 16:00</paper-item>
-              <paper-item data-value="16:00">16:00 - 18:00</paper-item>
-              <paper-item data-value="18:00">18:00 - 20:00</paper-item>
-            </paper-listbox>
-          </paper-dropdown-menu>
-
-          <div class="paper-button-container">                
-            <paper-button raised="" on-tap="onCheckoutFormButtonTap">Enviar</paper-button>                
-          </div>              
-        </form>        
-      </main>       
-    </div>
-
-    <paper-toast id="toast" text="Registrando pedido..." duration="0">
-    </paper-toast>    
-  </template>
-
-  </dom-module>
-<script src="checkout-page.js"></script></body></html>
+<link rel="import" href="../../bower_components/polymer/polymer.html"><link rel="import" href="../../bower_components/iron-form/iron-form.html"><link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html"><link rel="import" href="../../bower_components/gold-phone-input/gold-phone-input.html"><link rel="import" href="../../bower_components/paper-button/paper-button.html"><link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html"><link rel="import" href="../../bower_components/paper-input/paper-input.html"><link rel="import" href="../../bower_components/paper-item/paper-item.html"><link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html"><link rel="import" href="../../bower_components/paper-input/paper-textarea.html"><link rel="import" href="../../bower_components/paper-toast/paper-toast.html"><link rel="import" href="../../bower_components/paper-styles/color.html"><link rel="import" href="../../bower_components/paper-styles/typography.html"><link rel="import" href="../paneiro-theme.html"><link rel="import" href="../elements/phone-input.html"><link rel="import" href="../elements/cpf-input.html"><dom-module id="checkout-page"><template><style>.divider-border,paper-button{background:var(--primary-color)}:host{display:block;@apply(--paper-font-common-base)}header{padding:0 8px}main{padding:48px 0}.page-title{@apply(--paper-font-display1);margin-bottom:20px;font-weight:300;text-align:center}.divider{height:1px;width:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-justify-content:center;-moz-justify-content:center;justify-content:center}.divider-border{height:100%;width:100px;max-width:100%}paper-button{@apply(--paper-font-button);color:#fff;margin:0}#checkoutForm{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}.input{margin:8px}.input-email,.input-name{width:calc(66.666666% - 16px)}.input-cpf,.input-phone{width:calc(33.333333% - 16px)}.input-address,.paper-button-container{width:calc(100% - 16px)}.input-delivery-day,.input-delivery-time{width:calc(50% - 16px)}.paper-button-container{margin:8px;text-align:center}@media screen and (max-width:768px){.input-cpf,.input-email,.input-name,.input-phone{width:calc(100% - 16px)}}</style><iron-location id="ironLocation"></iron-location><div class="container"><header><h2 class="page-title">Fechar Pedido</h2><div class="divider"><div class="divider-border"></div></div></header><main><form is="iron-form" id="checkoutForm" action="" accept-charset="UTF-8" method="post" on-iron-form-presubmit="onCheckoutFormPreSubmit"><paper-input auto-validate error-message="Por favor digite seu nome completo" name="name" class="input input-name" label="Nome Completo" value$="{{user.name}}" disabled="disabled"></paper-input><cpf-input auto-validate error-message="Por favor digite um cpf válido" name="cpf" class="input input-cpf" label="Cpf" value$="{{user.cpf}}" disabled="disabled"></cpf-input><gold-email-input class="input input-email" auto-validate name="email" label="Email" error-message="Por favor digite um email válido" value$="{{user.email}}" disabled="disabled"></gold-email-input><phone-input class="input input-phone" auto-validate name="phone" label="Telefone" error-message="Por favor digite um telefone válido" value$="{{user.phone}}" disabled="disabled"></phone-input><paper-input name="addr" class="input input-address" label="Endereço para entrega" error-message="Por favor informe o endereço onde deseja receber o pedido." required></paper-input><paper-dropdown-menu id="dateMenu" label="Dia da entrega" class="input input-delivery-day" name="delivery-day" required><paper-listbox class="dropdown-content" selected="0"><template is="dom-repeat" items="{{days}}"><paper-item data-value$="{{item.value}}">{{item.label}}</paper-item></template></paper-listbox></paper-dropdown-menu><paper-dropdown-menu id="timeMenu" label="Horário da entrega" class="input input-delivery-time" name="delivery-time" required><paper-listbox class="dropdown-content" selected="0"><paper-item data-value="12:00">12:00 - 14:00</paper-item><paper-item data-value="14:00">14:00 - 16:00</paper-item><paper-item data-value="16:00">16:00 - 18:00</paper-item><paper-item data-value="18:00">18:00 - 20:00</paper-item></paper-listbox></paper-dropdown-menu><div class="paper-button-container"><paper-button raised on-tap="onCheckoutFormButtonTap">Enviar</paper-button></div></form></main></div><paper-toast id="toast" text="Registrando pedido..." duration="0"></paper-toast></template><script type="text/javascript">"use strict";!function(e,t,a,o,s){Polymer({is:"checkout-page",properties:{user:Object,cart:Object,days:{type:Array,notify:!0}},ready:function(){if(0===this.cart.items.length)this.$.ironLocation.path="/loja/categoria/petshop";else{var e=["Dom","Seg","Ter","Qua","Qui","Sex","Sáb"],t=new Date;if(this.days=[],t.getDay()<=1){var a=3-t.getDay();t.setDate(t.getDate()+a)}else if(t.getDay()<=4){var a=6-t.getDay();t.setDate(t.getDate()+a)}else{var a=7-t.getDay()+3;t.setDate(t.getDate()+a)}for(var o=0;o<4;++o)this.push("days",{label:e[t.getDay()]+" - "+t.getDate()+"/"+(t.getMonth()+1),value:t.getFullYear()+"-"+(t.getMonth()+1)+"-"+t.getDate()}),3===t.getDay()?t.setDate(t.getDate()+3):t.setDate(t.getDate()+4)}},onCheckoutFormPreSubmit:function(e){var t=this;e.preventDefault();var a=this.$.toast,s=o.modals.message,r=this.$.checkoutForm.serialize();a.open();var i=this.$.dateMenu.selectedItem.getAttribute("data-value")+" "+this.$.timeMenu.selectedItem.getAttribute("data-value");o.api.purchase.checkout({phone:this.user.phone,addr:r.addr,deliveryDate:i}).then(function(e){a.close(),s.message="Seu pedido foi registrado com sucesso, e será entregue na data e horário agendados.\nCaso seja necessário, entraremos em contato.\nAgradecemos a preferência e até a próxima!",s.title="Pedido registrado com sucesso.",s.open(),t.set("cart.items",[]),t.set("cart.total",0),t.$.ironLocation.set("path","/loja/categoria/petshop")}).catch(function(e){return console.log(e)})},onCheckoutFormButtonTap:function(){this.$.checkoutForm.validate()&&this.$.checkoutForm.submit()}})}(window,document,void 0,paneiro,jambo);</script></dom-module>
