--- a/src/pages/contact-page.html
+++ b/src/pages/contact-page.html
@@ -1,160 +1,1 @@
-<html><head><link rel="import" href="../../bower_components/polymer/polymer.html">
-
-<link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
-<link rel="import" href="../../bower_components/gold-phone-input/gold-phone-input.html">
-
-<link rel="import" href="../../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/paper-input/paper-textarea.html">
-<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="../../bower_components/paper-styles/color.html">
-<link rel="import" href="../../bower_components/paper-styles/typography.html">
-
-<link rel="import" href="../../bower_components/iron-form/iron-form.html">
-<link rel="import" href="../../bower_components/iron-location/iron-location.html">
-
-<link rel="import" href="../paneiro-theme.html">
-<link rel="import" href="../partials/page-header.html">
-<link rel="import" href="../partials/page-footer.html">
-<link rel="import" href="../elements/phone-input.html">
-<link rel="import" href="../elements/cpf-input.html">
-
-</head><body><dom-module id="contact-page">
-  <template>
-    <style type="text/css">
-      :host {
-        display: block;
-        @apply(--paper-font-common-base);
-      }
-
-      p {
-        margin: 8px;
-      }    
-
-      header {
-        padding: 0 8px;
-      }
-
-      main {
-        padding: 48px 0;
-      }      
-
-      header, main {
-        display: block;
-        margin: 0 auto;
-        width: 70%;
-      }
-
-      .page-title {
-        @apply(--paper-font-display1);
-        margin-bottom: 20px;
-        font-weight: 300;
-        text-align: center;
-      }     
-
-      .divider {
-        height: 1px;
-        width: 100%;                
-
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-
-        -webkit-justify-content: center;
-        -moz-justify-content: center;
-        justify-content: center;
-      } 
-
-      .divider-border {        
-        height: 100%;
-        width: 100px;
-        max-width: 100%;
-        background: var(--primary-color);        
-      }      
-
-      paper-button {
-        @apply(--paper-font-button);
-        background: var(--primary-color);
-        color: #fff;
-        margin: 0;
-      }    
-
-      #messageForm {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;        
-      }
-
-      .input {
-        margin: 8px;
-      }
-
-      .input-name, .input-email {
-        width: calc(50% - 16px);
-      }      
-
-      .input-subject, .input-message, .paper-button-container {
-        width: calc(100% - 16px);
-      }
-
-      .paper-button-container {
-        margin: 8px;
-        text-align: center;
-      }
-
-      @media screen and (max-width: 980px) {
-        header, main {
-          width: 100%;
-        }
-      }
-
-      @media screen and (max-width: 768px) {
-        .input-name, .input-email {
-          width: calc(100% - 16px);
-        }
-      }
-    </style>    
-
-    <iron-location id="ironLocation"></iron-location>
-
-    <page-header no-search-bar="" no-main-menu=""></page-header>
-
-    <div class="container">
-      <header>              
-        <h2 class="page-title">Fale Conosco</h2>
-
-        <div class="divider">
-          <div class="divider-border"></div>
-        </div>                                              
-      </header>                                            
-
-      <main>        
-        <p>Envie a sua mensagem e responderemos o mais rápido possível.</p>
-
-        <form is="iron-form" id="messageForm" action="//api.paneirovirtual.com/v1/contact" accept-charset="UTF-8" content-type="application/x-www-form-urlencoded" method="post" on-iron-form-response="onMessageFormResponse">
-          <paper-input auto-validate="" error-message="Por favor digite seu nome completo." name="name" class="input input-name" label="Nome Completo" required=""></paper-input>          
-
-          <gold-email-input class="input input-email" auto-validate="" name="email" label="Email" error-message="Por favor digite um email válido." required=""></gold-email-input>
-
-          <paper-input auto-validate="" label="Assunto" error-message="Por favor informe o assunto da mensagem." name="subject" class="input input-subject" required=""></paper-input>
-
-          <paper-textarea required="" name="message" class="input input-message" label="Digite a sua mensagem aqui." error-message="É necessário escrever uma mensagem." rows="6"></paper-textarea>          
-
-          <div class="paper-button-container">                
-            <paper-button raised="" on-tap="onSendFormButtonTap">Enviar</paper-button>                
-          </div>              
-        </form>        
-      </main>       
-    </div>
-
-    <paper-toast id="toast" text="Enviando mensagem..." duration="0">
-    </paper-toast>
-    <page-footer></page-footer>
-  </template>
-
-  </dom-module>
-<script src="contact-page.js"></script></body></html>
+<link rel="import" href="../../bower_components/polymer/polymer.html"><link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html"><link rel="import" href="../../bower_components/gold-phone-input/gold-phone-input.html"><link rel="import" href="../../bower_components/paper-button/paper-button.html"><link rel="import" href="../../bower_components/paper-input/paper-input.html"><link rel="import" href="../../bower_components/paper-input/paper-textarea.html"><link rel="import" href="../../bower_components/paper-toast/paper-toast.html"><link rel="import" href="../../bower_components/paper-styles/color.html"><link rel="import" href="../../bower_components/paper-styles/typography.html"><link rel="import" href="../../bower_components/iron-form/iron-form.html"><link rel="import" href="../../bower_components/iron-location/iron-location.html"><link rel="import" href="../paneiro-theme.html"><link rel="import" href="../partials/page-header.html"><link rel="import" href="../partials/page-footer.html"><link rel="import" href="../elements/phone-input.html"><link rel="import" href="../elements/cpf-input.html"><dom-module id="contact-page"><template><style>.divider-border,paper-button{background:var(--primary-color)}:host{display:block;@apply(--paper-font-common-base)}p{margin:8px}header{padding:0 8px}main{padding:48px 0}header,main{display:block;margin:0 auto;width:70%}.page-title{@apply(--paper-font-display1);margin-bottom:20px;font-weight:300;text-align:center}.divider{height:1px;width:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-justify-content:center;-moz-justify-content:center;justify-content:center}.divider-border{height:100%;width:100px;max-width:100%}paper-button{@apply(--paper-font-button);color:#fff;margin:0}#messageForm{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap}.input{margin:8px}.input-email,.input-name{width:calc(50% - 16px)}.input-message,.input-subject,.paper-button-container{width:calc(100% - 16px)}.paper-button-container{margin:8px;text-align:center}@media screen and (max-width:980px){header,main{width:100%}}@media screen and (max-width:768px){.input-email,.input-name{width:calc(100% - 16px)}}</style><iron-location id="ironLocation"></iron-location><page-header no-search-bar no-main-menu></page-header><div class="container"><header><h2 class="page-title">Fale Conosco</h2><div class="divider"><div class="divider-border"></div></div></header><main><p>Envie a sua mensagem e responderemos o mais rápido possível.</p><form is="iron-form" id="messageForm" action="//api.paneirovirtual.com/v1/contact" accept-charset="UTF-8" content-type="application/x-www-form-urlencoded" method="post" on-iron-form-response="onMessageFormResponse"><paper-input auto-validate error-message="Por favor digite seu nome completo." name="name" class="input input-name" label="Nome Completo" required></paper-input><gold-email-input class="input input-email" auto-validate name="email" label="Email" error-message="Por favor digite um email válido." required></gold-email-input><paper-input auto-validate label="Assunto" error-message="Por favor informe o assunto da mensagem." name="subject" class="input input-subject" required></paper-input><paper-textarea required name="message" class="input input-message" label="Digite a sua mensagem aqui." error-message="É necessário escrever uma mensagem." rows="6"></paper-textarea><div class="paper-button-container"><paper-button raised on-tap="onSendFormButtonTap">Enviar</paper-button></div></form></main></div><paper-toast id="toast" text="Enviando mensagem..." duration="0"></paper-toast><page-footer></page-footer></template><script type="text/javascript">"use strict";!function(e,s,o,a,t){Polymer({is:"contact-page",onMessageFormResponse:function(e){this.$.toast.close();var s=a.modals.message;s.message="Sua mensagem foi enviada com sucesso. Aguarde e entraremos em contato o mais rápido possível.",s.title="Mensagem enviada com sucesso!",s.open()},onSendFormButtonTap:function(){this.$.messageForm.validate()&&(this.$.toast.open(),this.$.messageForm.submit())}})}(window,document,void 0,paneiro,jambo);</script></dom-module>
