--- a/src/pages/search-page.html
+++ b/src/pages/search-page.html
@@ -1,94 +1,1 @@
-<html><head><link rel="import" href="../../bower_components/polymer/polymer.html">
-
-<link rel="import" href="../../bower_components/app-route/app-route.html">
-
-<link rel="import" href="../../bower_components/paper-styles/typography.html">
-
-<link rel="import" href="../elements/product-grid.html">
-
-</head><body><dom-module id="search-page">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-
-      .main-content {
-        padding: 48px 8px;
-      }
-
-      #loadMoreWrapper {
-        text-align: center;
-      }   
-
-      #loadMoreButton {
-        @apply(--paper-font-button);
-        background: var(--primary-color);
-        color: #fff;
-        margin: 16px;
-      }
-
-      paper-spinner-lite {
-        height: 50px;
-        width: 50px;
-        display: block;
-        margin: 0 auto;
-
-        --paper-spinner-color: var(--primary-color);
-        --paper-spinner-stroke-width: 4px;
-      } 
-
-      paper-spinner-lite:not([active]) {
-        display: none;
-      }
-
-      .page-title {
-        @apply(--paper-font-display1);
-        margin: 0 8px 16px 0;
-      }
-
-      .not-found-wrapper {
-        @apply(--paper-font-subhead);
-        color: var(--secondary-text-color);
-        margin-top: 16px;
-      }
-
-      @media screen and (max-width: 780px) {
-        .page-title {
-          @apply(--paper-font-headline);
-        }
-      }
-    </style>
-    
-    <app-route id="appRoute" route="{{route}}" data="{{routeData}}" pattern="/busca" query-params="{{params}}"></app-route>
-
-    <main class="container main-content">
-      <div class="page-title">
-        Resultados de busca para "<span class="query">{{params.q}}</span>"
-      </div>      
-
-      <paper-spinner-lite id="loadingSpinner" active="{{firstLoad}}"></paper-spinner-lite>
-
-      <product-grid products="{{products}}" cart="{{cart}}"></product-grid>
-
-      
-      <template is="dom-if" if="{{emptyResult}}">
-        <div class="not-found-wrapper">
-          Sua busca não retornou nenhum resultado. <br>
-          Tente algo como:
-          <ul>
-            <li>Utilizar termos mais genéricos.</li>
-            <li>Checar a escrita dos termos.</li>
-          </ul>
-        </div>        
-      </template>      
-
-      <template is="dom-if" if="{{hasNext}}">
-        <div id="loadMoreWrapper">
-          <paper-button id="loadMoreButton" on-tap="onLoadMoreTap">Ver mais produtos</paper-button>
-        </div>
-      </template>
-    </main>    
-  </template>
-  </dom-module>
-<script src="search-page.js"></script></body></html>
+<link rel="import" href="../../bower_components/polymer/polymer.html"><link rel="import" href="../../bower_components/app-route/app-route.html"><link rel="import" href="../../bower_components/paper-styles/typography.html"><link rel="import" href="../elements/product-grid.html"><dom-module id="search-page"><template><style>:host{display:block}.main-content{padding:48px 8px}#loadMoreWrapper{text-align:center}#loadMoreButton{@apply(--paper-font-button);background:var(--primary-color);color:#fff;margin:16px}paper-spinner-lite{height:50px;width:50px;display:block;margin:0 auto;--paper-spinner-color:var(--primary-color);--paper-spinner-stroke-width:4px}paper-spinner-lite:not([active]){display:none}.page-title{@apply(--paper-font-display1);margin:0 8px 16px 0}.not-found-wrapper{@apply(--paper-font-subhead);color:var(--secondary-text-color);margin-top:16px}@media screen and (max-width:780px){.page-title{@apply(--paper-font-headline)}}</style><app-route id="appRoute" route="{{route}}" data="{{routeData}}" pattern="/busca" query-params="{{params}}"></app-route><main class="container main-content"><div class="page-title">Resultados de busca para "<span class="query">{{params.q}}</span>"</div><paper-spinner-lite id="loadingSpinner" active="{{firstLoad}}"></paper-spinner-lite><product-grid products="{{products}}" cart="{{cart}}"></product-grid><template is="dom-if" if="{{emptyResult}}"><div class="not-found-wrapper">Sua busca não retornou nenhum resultado.<br>Tente algo como:<ul><li>Utilizar termos mais genéricos.</li><li>Checar a escrita dos termos.</li></ul></div></template><template is="dom-if" if="{{hasNext}}"><div id="loadMoreWrapper"><paper-button id="loadMoreButton" on-tap="onLoadMoreTap">Ver mais produtos</paper-button></div></template></main></template><script type="text/javascript">"use strict";!function(e,t,s,a,o){Polymer({is:"search-page",properties:{cart:Object,emptyResult:{type:Boolean,value:!1},firstLoad:{type:Boolean,notify:!0},hasNext:{type:Boolean,value:!1},route:Object,page:Number,params:{type:Object,observer:"_paramsChanged"},products:{type:Object,notify:!0}},_loadProducts:function(){var t=this;a.api.product.search({query:this.params.q,page:this.page}).then(function(o){1===t.page?(t.products=o.data,t.products.forEach(function(e){e.qty=1}),e.scrollTo(0,0)):o.data.forEach(function(e){e.qty=1,t.push("products",e)}),t.emptyResult=0===o.data.length,t.hasNext=o.paging!==s&&o.paging.next!==s,t.firstLoad||(a.sharedElements.loadingProgress.value=100,a.sharedElements.loadingProgress.classList.remove("transiting"),setTimeout(function(){a.sharedElements.loadingProgress.value=0},300)),t.firstLoad=!1})},_paramsChanged:function(e){this.firstLoad?this.products=[]:(a.sharedElements.loadingProgress.classList.add("transiting"),a.sharedElements.loadingProgress.value=85),this.emptyResult=!1,this.page=1,this._loadProducts()},onLoadMoreTap:function(){this.page++,this._loadProducts(),this.firstLoad||(a.sharedElements.loadingProgress.classList.add("transiting"),a.sharedElements.loadingProgress.value=85)}})}(window,document,void 0,paneiro,jambo);</script></dom-module>
