--- a/src/paneiro-theme.html
+++ b/src/paneiro-theme.html
@@ -1,9 +1,4 @@
-<html><head><link rel="import" href="../bower_components/polymer/polymer.html">
-
-<link rel="import" href="../bower_components/paper-styles/color.html">
-
-<style is="custom-style">
-  :root {
+<link rel="import" href="../bower_components/polymer/polymer.html"><link rel="import" href="../bower_components/paper-styles/color.html"><style is="custom-style">:root {
     /* ------------------------------------------------------------------------- 
     - GENERIC RULES 
     --------------------------------------------------------------------------*/        
@@ -46,6 +41,4 @@
      */
     --text-primary-color: var(--dark-theme-text-color);
     --default-primary-color: var(--primary-color);                    
-  }
-</style>
-</head><body></body></html>
+  }</style>
