--- a/src/elements/cpf-input.html
+++ b/src/elements/cpf-input.html
@@ -1,18 +1,3 @@
-<html><head><link rel="import" href="../../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../../bower_components/iron-validator-behavior/iron-validator-behavior.html">
-
-
-</head><body><dom-module id="cpf-input">
-  <template>
-    <style>
-      :host {
+<link rel="import" href="../../bower_components/paper-input/paper-input.html"><link rel="import" href="../../bower_components/iron-validator-behavior/iron-validator-behavior.html"><dom-module id="cpf-input"><template><style>:host {
         display: block;
-      }
-    </style>
-        
-    <cpf-validator validator-name="cpf-validator"></cpf-validator>
-    <paper-input auto-validate="{{autoValidate}}" error-message="{{errorMessage}}" label="{{label}}" name="{{name}}" required="{{required}}" disabled="{{disabled}}" value="{{value}}" maxlength="14" minlength="14" on-input="change" validator="cpf-validator"></paper-input>    
-  </template>
-
-  </dom-module>
-<script src="cpf-input.js"></script></body></html>
+      }</style><cpf-validator validator-name="cpf-validator"></cpf-validator><paper-input auto-validate="{{autoValidate}}" error-message="{{errorMessage}}" label="{{label}}" name="{{name}}" required="{{required}}" disabled="{{disabled}}" value="{{value}}" maxlength="14" minlength="14" on-input="change" validator="cpf-validator"></paper-input></template><script type="text/javascript">"use strict";!function(r,t,e,a,i){Polymer({is:"cpf-validator",behaviors:[Polymer.IronValidatorBehavior],validate:function(r){for(var t="",e=r.charAt(0),a=!0,i=0,n=r.length;i<n;++i)isNaN(r.charAt(i))||(t+=r.charAt(i),a&&(a=a&&e===r.charAt(i)));if(r=t,a)return!1;var o,s;if(o=0,"00000000000"==r)return!1;for(i=1;i<=9;i++)o+=parseInt(r.substring(i-1,i))*(11-i);if(s=10*o%11,10!=s&&11!=s||(s=0),s!=parseInt(r.substring(9,10)))return!1;for(o=0,i=1;i<=10;i++)o+=parseInt(r.substring(i-1,i))*(12-i);return s=10*o%11,10!=s&&11!=s||(s=0),s==parseInt(r.substring(10,11))}}),Polymer({is:"cpf-input",properties:{autoValidate:Boolean,errorMessage:String,label:String,name:String,value:String,required:Boolean,disabled:Boolean},change:function(r){for(var t=this,e=r.target.value,a="",i=0,n=e.length;i<n&&i<14;++i)3===i||7===i?a+=".":11===i&&(a+="-"),isNaN(e.charAt(i))||(a+=e.charAt(i));setTimeout(function(){t.teste=2},2e3),r.target.value=a,r.target.validate()}})}(window,document,void 0,paneiro,jambo);</script></dom-module>
