--- a/src/elements/phone-input.html
+++ b/src/elements/phone-input.html
@@ -1,14 +1,3 @@
-<html><head><link rel="import" href="../../bower_components/paper-input/paper-input.html">
-
-</head><body><dom-module id="phone-input">
-  <template>
-    <style>
-      :host {
+<link rel="import" href="../../bower_components/paper-input/paper-input.html"><dom-module id="phone-input"><template><style>:host {
         display: block;
-      }
-    </style>
-        
-    <paper-input auto-validate="{{autoValidate}}" error-message="{{errorMessage}}" label="{{label}}" name="{{name}}" required="{{required}}" disabled="{{disabled}}" value="{{value}}" maxlength="15" minlength="14" on-input="change" pattern="^\(92\)\s\d{4,5}-\d{4}$"></paper-input>    
-  </template>
-  </dom-module>
-<script src="phone-input.js"></script></body></html>
+      }</style><paper-input auto-validate="{{autoValidate}}" error-message="{{errorMessage}}" label="{{label}}" name="{{name}}" required="{{required}}" disabled="{{disabled}}" value="{{value}}" maxlength="15" minlength="14" on-input="change" pattern="^\(92\)\s\d{4,5}-\d{4}$"></paper-input></template><script type="text/javascript">"use strict";!function(e,a,t,r,n){Polymer({is:"phone-input",properties:{autoValidate:Boolean,errorMessage:String,label:String,name:String,disabled:Boolean,required:Boolean,value:String},change:function(e){var a=e.target.value,t="",r=0;a.length>=5&&(a=a.substr(5));for(var n=0,o=a.length;n<o&&n<10;++n)10===o?5===r&&(t+="-",++r):4===r&&(t+="-",++r),isNaN(a.charAt(n))||(t+=a.charAt(n),++r);""!==t?e.target.value="(92) "+t:e.target.value="",e.target.validate()}})}(window,document,void 0,paneiro,jambo);</script></dom-module>
